samples/_failures_safe/1761428170_4b435b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d0e13af7.c: In function ‘main’:
./samples/SAFE/__tmp_d0e13af7.c:121:42: error: expected ‘)’ at end of input
  121 |         read_matrix(rows2, cols2, matrix2
      |                    ~                     ^
      |                                          )
./samples/SAFE/__tmp_d0e13af7.c:121:9: error: expected declaration or statement at end of input
  121 |         read_matrix(rows2, cols2, matrix2
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_d0e13af7.c:121:9: error: expected declaration or statement at end of input
